# AITaskQueue

./: .env.docker  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CLAUDE_CONFIG_AUDIT.md  Dockerfile.frontend  README.md  claude-progress.txt  demo-project-subtask.html  docker-compose.yml  feature_list.json  index.html  init.sh  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
.husky/: pre-commit
.worktree-prompts/: A-live-actions.md  B-orchestrator-e2e.md  C-polish-infra.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a26bb481b78b_add_project_and_parent_id_to_tasks.py  bdb085160b3d_initial_schema.py  f96067e43c25_add_agent_logs_table_for_cli_event_.py
backend/app/: config.py  database.py  main.py
backend/app/api/: activities.py  agents.py  chat.py  deps.py  history.py  tasks.py
backend/app/models/: __init__.py  activity.py  agent.py  agent_log.py  chat.py  enums.py  history.py  task.py
backend/app/orchestrator/: __init__.py  engine.py  scheduler.py  subprocess_runner.py
backend/app/schemas/: activity.py  agent.py  agent_log.py  chat.py  history.py  task.py
backend/app/services/: agent_service.py  claude_service.py  task_service.py
backend/app/ws/: handler.py  manager.py
backend/tests/: conftest.py  test_api_tasks.py  test_orchestrator.py  test_pg_specific.py  test_scheduler.py  test_ws_integration.py
e2e/: playwright.config.ts  task-lifecycle.spec.ts
src/: App.tsx  index.css  main.tsx
src/constants/: colors.ts  mock-data.ts
test/: setup.ts
(+57 files in other folders)
